# zellij

./: .gitignore  Cargo.toml  README.md  ZELLIJ_COMPAT.md  claude-shim-setup.md  rust-toolchain.toml
default-plugins/side-bar/: Cargo.toml
docs/: PROJ-ARCH.md  PROJ-ARCH.summary.md  PROJ-LAYOUT.md  PROJ-LAYOUT.summary.md
docs/arch/: cct-tmux-shim.md  claude-tmux-internals.md  claude-tmux-internals.summary.md  client-server-ipc.md  pane-architecture.md  plugin-system.md  server-threads.md
docs/layout/: default-plugins.md  zellij-client.md  zellij-server.md  zellij-utils.md
example/: default.kdl
scripts/: activate-tmux-compat.sh
src/: commands.rs  tmux_shim_main.rs
zellij-cct-tmux/: Cargo.toml  TESTING.md
zellij-cct-tmux/docs/: ARCHITECTURE.md
zellij-cct-tmux/src/: dispatch.rs  format.rs  idmap.rs  keys.rs  lib.rs  logger.rs  ready_wait.rs  tab_resolve.rs  winmap.rs  zellij_bridge.rs
zellij-cct-tmux/src/commands/: break_pane.rs  capture_pane.rs  display_message.rs  has_session.rs  join_pane.rs  kill_pane.rs  kill_window.rs  list_panes.rs  list_sessions.rs  list_windows.rs  mod.rs  new_session.rs  new_window.rs  rename_window.rs  resize_pane.rs  select_layout.rs  select_pane.rs  select_window.rs  send_keys.rs  set_option.rs  show_options.rs  split_window.rs  stub.rs  version.rs
zellij-client/src/: lib.rs
zellij-server/src/: lib.rs  os_input_output_unix.rs  os_input_output_windows.rs  route.rs  screen.rs  session_layout_metadata.rs
zellij-utils/src/: cli.rs  consts.rs  data.rs  emoji.rs  envs.rs  errors.rs  lib.rs  session_serialization.rs
(+24 files in other folders)
